RESOLVED FIXED251234
[ iOS Release ] imported/w3c/web-platform-tests/webcodecs/videoFrame-texImage.any.worker.html is a constant text only failure.
https://bugs.webkit.org/show_bug.cgi?id=251234
Summary [ iOS Release ] imported/w3c/web-platform-tests/webcodecs/videoFrame-texImage...
Bri Harris
Reported 2023-01-26 16:51:15 PST
imported/w3c/web-platform-tests/webcodecs/videoFrame-texImage.any.worker.html is a constant text only failure on iOS. HISTORY: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fwebcodecs%2FvideoFrame-texImage.any.worker.html The interesting part about this failure is that the test results differ depending on if the test is run on Apple Silicon or Intel. iOS Release on arm64 pretty diff text: /Volumes/Data/worker/Apple-iOS-16-Simulator-Release-arm64-WK2-Tests/build/layout-test-results/imported/w3c/web-platform-tests/webcodecs/videoFrame-texImage.any.worker-actual.txt 11 2 PASS texImage2D with 48x36 srgb VideoFrame. 2FAIL texImage2D with 48x36 srgb VideoFrame. assert_equals: expected 150 but got 151 33PASS texSubImage2D with 48x36 srgb VideoFrame. 4 PASS texImage2D with 480x360 srgb VideoFrame. 4FAIL texImage2D with 480x360 srgb VideoFrame. assert_equals: expected 150 but got 151 55PASS texSubImage2D with 480x360 srgb VideoFrame. 66PASS texImage2D with a closed VideoFrame. 77PASS texSubImage2D with a closed VideoFrame. iOS Release on x86_84 pretty diff text: /Volumes/Data/worker/Apple-iOS-16-Simulator-Release-WK2-Tests/build/layout-test-results/imported/w3c/web-platform-tests/webcodecs/videoFrame-texImage.any.worker-actual.txt 11 2 PASS texImage2D with 48x36 srgb VideoFrame. 2FAIL texImage2D with 48x36 srgb VideoFrame. assert_equals: expected 50 but got 0 33PASS texSubImage2D with 48x36 srgb VideoFrame. 4 PASS texImage2D with 480x360 srgb VideoFrame. 4FAIL texImage2D with 480x360 srgb VideoFrame. assert_equals: expected 50 but got 0 55PASS texSubImage2D with 480x360 srgb VideoFrame. 66PASS texImage2D with a closed VideoFrame. 77PASS texSubImage2D with a closed VideoFrame.
Attachments
Bri Harris
Comment 1 2023-01-26 16:51:20 PST
I was able to reproduce the text failure initially as follows on iOS Release and Debug ToT: run-webkit-test --iOS-simulator imported/w3c/web-platform-tests/webcodecs/videoFrame-texImage.any.worker.html
Radar WebKit Bug Importer
Comment 2 2023-01-26 16:52:15 PST
Bri Harris
Comment 3 2023-01-26 17:11:04 PST
EWS
Comment 4 2023-01-26 17:38:35 PST
Test gardening commit 259462@main (53e15e3dd757): <https://commits.webkit.org/259462@main> Reviewed commits have been landed. Closing PR #9197 and removing active labels.
Bri Harris
Comment 5 2023-01-27 16:01:38 PST
EWS
Comment 6 2023-01-27 16:06:07 PST
Test gardening commit 259511@main (0bada1b982e0): <https://commits.webkit.org/259511@main> Reviewed commits have been landed. Closing PR #9262 and removing active labels.
youenn fablet
Comment 7 2023-02-01 03:07:41 PST
EWS
Comment 8 2023-02-02 01:20:28 PST
Committed 259745@main (b1e18f0d12ca): <https://commits.webkit.org/259745@main> Reviewed commits have been landed. Closing PR #9442 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.