[ iOS Release ] imported/w3c/web-platform-tests/webcodecs/videoFrame-texImage.any.worker.html  is a constant text only failure. https://bugs.webkit.org/show_bug.cgi?id=251234 rdar://problem/104720207

Reviewed by Eric Carlson.

The fast code path does not work on iOS simulator when the image needs to be converted to YUV before becoming a texture.
We fallback to the SW code path in that case.

* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/ios/imported/w3c/web-platform-tests/webcodecs/videoFrame-texImage.any.worker-expected.txt: Removed.
* Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::texImageSourceHelper):

Canonical link: https://commits.webkit.org/259745@main